--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="menu-top">
                 <div class="menu-header">
                     <a class="logo" href="html/inbio/index.html">
-                        <img src="html/inbio/assets/images/logo/logos-circle.png" alt="Personal Portfolio">
+                        <img src="html/inbio/assets/images/slider/banner-01.png" alt="Personal Portfolio">
                     </a>
                     <div class="close-button">
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
@@ -101,17 +101,17 @@
                 <div class="social-share-style-1 mt--40">
                     <span class="title">Connect with Governor Kimani Wamatangi</span>
                     <ul class="social-share d-flex liststyle">
-                        <li class="facebook"><a href="https://www.facebook.com/sakaja"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook">
+                        <li class="facebook"><a href="https://web.facebook.com/people/Kimani-Wamatangi/100057950805696/?_rdc=1&_rdr"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook">
                                     <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                                 </svg></a>
                         </li>
-                        <li class="instagram"><a href="https://www.instagram.com/jsakaja/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
+                        <li class="instagram"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
                                     <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                                     <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                                     <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                                 </svg></a>
                         </li>
-                        <li class="linkedin"><a href="https://www.linkedin.com/in/johnson-sakaja-0a036515a/?originalSubdomain=ke"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
+                        <li class="linkedin"><a href="https://www.linkedin.com/in/senator-wamatangi-kimani-paul-7b055126/?originalSubdomain=ke"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                     <rect x="2" y="9" width="4" height="12"></rect>
                                     <circle cx="4" cy="4" r="2"></circle>
@@ -162,11 +162,11 @@
                                         <div class="social-share-inner-left">
                                             <span class="title">Connect with Governor Kimani Wamatangi</span>
                                             <ul class="social-share d-flex liststyle">
-                                                <li class="facebook"><a href="https://www.facebook.com/sakaja"><i data-feather="facebook"></i></a>
+                                                <li class="facebook"><a href="https://web.facebook.com/people/Kimani-Wamatangi/100057950805696/?_rdc=1&_rdr"><i data-feather="facebook"></i></a>
                                                 </li>
-                                                <li class="instagram"><a href="https://www.instagram.com/jsakaja/"><i data-feather="instagram"></i></a>
+                                                <li class="instagram"><a href="#"><i data-feather="instagram"></i></a>
                                                 </li>
-                                                <li class="linkedin"><a href="https://www.linkedin.com/in/johnson-sakaja-0a036515a/?originalSubdomain=ke"><i data-feather="linkedin"></i></a>
+                                                <li class="linkedin"><a href="https://www.linkedin.com/in/senator-wamatangi-kimani-paul-7b055126/?originalSubdomain=ke"><i data-feather="linkedin"></i></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -176,14 +176,14 @@
                                             <span class="title">View Governor Kimani Wamatangi</span>
                                             <ul class="skill-share d-flex liststyle">
                                                 <li>
-                                                    <a href="https://www.youtube.com/channel/UCyh100Xer5V_u5mih36wi6w?view_as=public"><img src="html/inbio/assets/images/icons/icons-01.png" alt="Icons Images">
+                                                    <a href="https://www.youtube.com/watch?v=E5wxP4VRvRY"><img src="html/inbio/assets/images/icons/icons-01.png" alt="Icons Images">
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://www.youtube.com/channel/UCyh100Xer5V_u5mih36wi6w?view_as=public"><img src="html/inbio/assets/images/icons/icons-02.png" alt="Icons Images"></a>
+                                                    <a href="https://www.youtube.com/watch?v=E5wxP4VRvRY"><img src="html/inbio/assets/images/icons/icons-02.png" alt="Icons Images"></a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://www.youtube.com/channel/UCyh100Xer5V_u5mih36wi6w?view_as=public"><img src="html/inbio/assets/images/icons/icons-03.png" alt="Icons Images"></a>
+                                                    <a href="https://www.youtube.com/watch?v=E5wxP4VRvRY"><img src="html/inbio/assets/images/icons/icons-03.png" alt="Icons Images"></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1011,9 +1011,9 @@
                             <div class="social-area">
                                 <div class="name">Lets Link up</div>
                                 <div class="social-icone">
-                                    <a href="https://www.facebook.com/sakaja"><i data-feather="facebook"></i></a>
-                                    <a href="https://www.linkedin.com/in/johnson-sakaja-0a036515a/?originalSubdomain=ke"><i data-feather="linkedin"></i></a>
-                                    <a href="https://www.instagram.com/jsakaja/"><i data-feather="instagram"></i></a>
+                                    <a href="https://web.facebook.com/people/Kimani-Wamatangi/100057950805696/?_rdc=1&_rdr"><i data-feather="facebook"></i></a>
+                                    <a href="https://www.linkedin.com/in/senator-wamatangi-kimani-paul-7b055126/?originalSubdomain=ke"><i data-feather="linkedin"></i></a>
+                                    <a href="#"><i data-feather="instagram"></i></a>
                                 </div>
                             </div>
                         </div>
