--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
                     </div>
                 </div>
-                <p class="discription">Vote Kimani Wamatangi for Governor 2022.</p>
+                <p class="discription">Vote Kimani Wamatangi for Kiambu Governor 2022.</p>
             </div>
             <div class="content">
                 <ul class="primary-menu nav nav-pills">
