--- a/index.html
+++ b/index.html
@@ -1005,8 +1005,8 @@
                             <div class="description">
 
                                 <span class="phone">Address: <a> Kiambu Town</a></span>
-                                <span class="phone">Phone: <a href="tel:25476960662">+25476 960 662</a></span>
-                                <span class="mail">Email: <a href="mailto:kimaniwamatangi@email.co.ke">kimaniwamatangi@email.co.ke</a></span>
+                                <span class="phone">Phone: <a href="tel:254769212648">+254 769 212 648</a></span>
+                                <span class="mail">Email: <a href="mailto:georgemiriendichu@gmail.com">kimaniwamatangi@email.co.ke</a></span>
                             </div>
                             <div class="social-area">
                                 <div class="name">Lets Link up</div>
@@ -1381,15 +1381,13 @@
                 <div class="col-lg-4">
                     <div class="footer-area text-center">
 
-                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fpermalink.php%3Fstory_fbid%3D394533389155018%26id%3D100057950805696&show_text=true&width=500" width="100%" height="500" style="border:none;overflow:hidden" scrolling="no"
-                            frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fweb.facebook.com%2Fprofile.php%3Fid%3D100057950805696&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                            width="100%" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-area text-center">
-                        <blockquote class="twitter-tweet">
-                            <p lang="en" dir="ltr">Be Part of This Transformational Decision for Our County, KIAMBU.<a href="https://twitter.com/hashtag/GavanaNiWamatangi?src=hash&amp;ref_src=twsrc%5Etfw">#GavanaNiWamatangi</a> <a href="https://twitter.com/hashtag/NominateWamatangi?src=hash&amp;ref_src=twsrc%5Etfw">#NominateWamatangi</a>                                <a href="https://twitter.com/hashtag/UDAParty?src=hash&amp;ref_src=twsrc%5Etfw">#UDAParty</a> <a href="https://t.co/gd4rUqpCgQ">pic.twitter.com/gd4rUqpCgQ</a></p>&mdash; GVN 022 2022 🇰🇪 (@KWamatangi) <a href="https://twitter.com/KWamatangi/status/1513806608685584387?ref_src=twsrc%5Etfw">April 12, 2022</a></blockquote>
+                        <a class="twitter-timeline" data-width="100%" data-height="500px" href="https://twitter.com/KWamatangi?ref_src=twsrc%5Etfw">Tweets by KWamatangi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                 </div>
